--- a/src/main/resources/python/api.mustache
+++ b/src/main/resources/python/api.mustache
@@ -83,13 +83,7 @@ class {{classname}}(object):
 
         {{#formParams}}
         if ('{{paramName}}' in params):
-            {{#notFile}}
-            formParams['{{paramName}}'] = params['{{paramName}}']
-            {{/notFile}}
-            {{#isFile}}
-            files['{{paramName}}'] = params['{{paramName}}']
-            {{/isFile}}
-        {{#hasMore}}{{newline}}{{/hasMore}}
+            {{#notFile}}formParams['{{paramName}}'] = params['{{paramName}}']{{/notFile}}{{#isFile}}files['{{paramName}}'] = params['{{paramName}}']{{/isFile}}
         {{/formParams}}
 
         {{#bodyParam}}
