MultipartForm: some more fixing of formating

--- a/src/main/resources/python/api.mustache
+++ b/src/main/resources/python/api.mustache
@@ -84,6 +84,7 @@ class {{classname}}(object):
         {{#formParams}}
         if ('{{paramName}}' in params):
             {{#notFile}}formParams['{{paramName}}'] = params['{{paramName}}']{{/notFile}}{{#isFile}}files['{{paramName}}'] = params['{{paramName}}']{{/isFile}}
+            {{newline}}
         {{/formParams}}
 
         {{#bodyParam}}
