MultipartForm: adding support for php

--- a/src/main/resources/php/api.mustache
+++ b/src/main/resources/php/api.mustache
@@ -72,7 +72,12 @@ class {{classname}} {
       }
       {{#formParams}}
       if(${{paramName}} != null) {
+        {{#notFile}}
         $body['{{paramName}}'] = ${{paramName}};
+        {{/notFile}}
+        {{#isFile}}
+        $body['{{paramName}}'] = '@' . ${{paramName}};
+        {{/isFile}}
       }
       {{/formParams}}
       if (empty($body)) {
