--- a/modules/swagger-codegen/src/main/resources/objc/api-body.mustache
+++ b/modules/swagger-codegen/src/main/resources/objc/api-body.mustache
@@ -53,12 +53,11 @@ static NSString * basePath = @"{{basePath}}";
 
 
 {{#operation}}
--(NSNumber*) {{nickname}}WithCompletionBlock{{^allParams}}: {{/allParams}}{{#allParams}}{{#secondaryParam}}
-            {{paramName}}{{/secondaryParam}}:({{{dataType}}}) {{paramName}}{{newline}}        {{/allParams}}
+-(NSNumber*) {{nickname}}WithCompletionBlock{{^allParams}}: {{/allParams}}{{#allParams}}{{#secondaryParam}} {{paramName}}{{/secondaryParam}}:({{{dataType}}}) {{paramName}}
+        {{/allParams}}
         {{#returnBaseType}}{{#hasParams}}completionHandler: {{/hasParams}}(void (^)({{returnType}} output, NSError* error))completionBlock{{/returnBaseType}}
         {{^returnBaseType}}{{#hasParams}}completionHandler: {{/hasParams}}(void (^)(NSError* error))completionBlock{{/returnBaseType}} {
 
-    id m_body = {{#bodyParam}}{{paramName}}{{/bodyParam}}{{^bodyParam}}nil{{/bodyParam}};
     NSMutableString* requestUrl = [NSMutableString stringWithFormat:@"%@{{path}}", basePath];
 
     // remove format in URL if needed
@@ -73,16 +72,20 @@ static NSString * basePath = @"{{basePath}}";
 
     NSMutableDictionary* queryParams = [[NSMutableDictionary alloc] init];
     {{#queryParams}}if({{paramName}} != nil)
-        queryParams[@"{{baseName}}"] = {{paramName}};{{/queryParams}}
+        queryParams[@"{{baseName}}"] = {{paramName}};
+    {{/queryParams}}
     NSMutableDictionary* headerParams = [[NSMutableDictionary alloc] init];
     {{#headerParams}}if({{paramName}} != nil)
-        headerParams[@"{{baseName}}"] = {{paramName}};{{/headerParams}}
+        headerParams[@"{{baseName}}"] = {{paramName}};
+    {{/headerParams}}
 
     id bodyDictionary = nil;
     {{#bodyParam}}
-    if(m_body != nil && [m_body isKindOfClass:[NSArray class]]){
+    id __body = {{paramName}};
+
+    if(__body != nil && [__body isKindOfClass:[NSArray class]]){
         NSMutableArray * objs = [[NSMutableArray alloc] init];
-        for (id dict in (NSArray*)m_body) {
+        for (id dict in (NSArray*)__body) {
             if([dict respondsToSelector:@selector(asDictionary)]) {
                 [objs addObject:[(SWGObject*)dict asDictionary]];
             }
@@ -92,27 +95,26 @@ static NSString * basePath = @"{{basePath}}";
         }
         bodyDictionary = objs;
     }
-    else if([m_body respondsToSelector:@selector(asDictionary)]) {
-        bodyDictionary = [(SWGObject*)m_body asDictionary];
+    else if([__body respondsToSelector:@selector(asDictionary)]) {
+        bodyDictionary = [(SWGObject*)__body asDictionary];
     }
-    else if([m_body isKindOfClass:[NSString class]]) {
+    else if([__body isKindOfClass:[NSString class]]) {
         // convert it to a dictionary
         NSError * error;
-        NSString * str = (NSString*)m_body;
+        NSString * str = (NSString*)__body;
         NSDictionary *JSON =
             [NSJSONSerialization JSONObjectWithData:[str dataUsingEncoding:NSUTF8StringEncoding]
                                             options:NSJSONReadingMutableContainers
                                               error:&error];
         bodyDictionary = JSON;
     }
-    else if([m_body isKindOfClass: [SWGFile class]]) {
+    else if([__body isKindOfClass: [SWGFile class]]) {
         requestContentType = @"form-data";
-        bodyDictionary = m_body;
+        bodyDictionary = __body;
     }
     else{
-        NSLog(@"don't know what to do with %@", m_body);
+        NSLog(@"don't know what to do with %@", __body);
     }
-
     {{/bodyParam}}
     
     {{#requiredParamCount}}
@@ -125,106 +127,11 @@ static NSString * basePath = @"{{basePath}}";
 
     SWGApiClient* client = [SWGApiClient sharedClientFromPool:basePath];
 
-    {{#returnContainer}}
-    return [client dictionary: requestUrl 
-                               method: @"{{httpMethod}}" 
-                          queryParams: queryParams 
-                                 body: bodyDictionary 
-                         headerParams: headerParams
-                   requestContentType: requestContentType
-                  responseContentType: responseContentType
-                      completionBlock: ^(NSDictionary *data, NSError *error) {
-                         if (error) {
-                             {{#returnBaseType}}completionBlock(nil, error);{{/returnBaseType}}
-                             {{^returnBaseType}}completionBlock(error);{{/returnBaseType}}
-                             return;
-                         }
-                         
-                         {{#returnBaseType}}
-                         if([data isKindOfClass:[NSArray class]]){
-                             NSMutableArray * objs = [[NSMutableArray alloc] initWithCapacity:[data count]];
-                             for (NSDictionary* dict in (NSArray*)data) {
-                                {{#returnTypeIsPrimitive}}
-                                // {{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}"){{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}}{{/instantiationType}}{{newline}}
-                                {{returnBaseType}}* d = [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}} {{/instantiationType}} alloc]initWithString: data];
-                                {{/returnTypeIsPrimitive}}
-                                {{^returnTypeIsPrimitive}}
-                                {{{returnBaseType}}}* d = [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}} {{/instantiationType}} alloc]initWithValues: dict];
-                                {{/returnTypeIsPrimitive}}
-                                [objs addObject:d];
-                             }
-                             completionBlock(objs, nil);
-                         }
-                        {{#returnSimpleType}}
-                        {{#returnTypeIsPrimitive}}{{#returnBaseType}}completionBlock( [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}} {{/instantiationType}} alloc]initWithString: data], nil;{{/returnBaseType}}
-                        {{/returnTypeIsPrimitive}}
-                        {{^returnTypeIsPrimitive}}
-                        {{#returnBaseType}}completionBlock( [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}} {{/instantiationType}} alloc]initWithValues: data], nil);{{/returnBaseType}}
-                        {{/returnTypeIsPrimitive}}
-                        {{/returnSimpleType}}
-
-                         {{/returnBaseType}}
-                    }];
-    {{/returnContainer}}
-
+    {{#returnContainer}}{{>apiBodyResponseWithContainer}}{{/returnContainer}}
     {{#returnSimpleType}}
-    {{#returnTypeIsPrimitive}}
-    {{#returnBaseType}}
-    return [client stringWithCompletionBlock: requestUrl 
-                                      method: @"{{httpMethod}}" 
-                                 queryParams: queryParams 
-                                        body: bodyDictionary 
-                                headerParams: headerParams
-                          requestContentType: requestContentType
-                         responseContentType: responseContentType
-                             completionBlock: ^(NSString *data, NSError *error) {
-                 if (error) {
-                     completionBlock(nil, error);
-                     return;
-                 }
-                {{returnBaseType}} *result = data ? [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}} {{/instantiationType}} alloc]initWithString: data] : nil;
-                completionBlock(result, nil);
-             }];{{/returnBaseType}}
-    {{^returnBaseType}}
-    return [client stringWithCompletionBlock:requestUrl 
-                                             method:@"{{httpMethod}}" 
-                                        queryParams:queryParams 
-                                               body:bodyDictionary 
-                                       headerParams:headerParams
-                                 requestContentType: requestContentType
-                                responseContentType: responseContentType
-                                    completionBlock:^(NSString *data, NSError *error) {
-                        if (error) {
-                            completionBlock(error);
-                            return;
-                        }
-                        completionBlock(nil);
-                    }];
-    {{/returnBaseType}}{{/returnTypeIsPrimitive}}
-    {{#returnBaseType}}{{^returnTypeIsPrimitive}}
-    return [client dictionary:requestUrl 
-                              method:@"{{httpMethod}}" 
-                         queryParams:queryParams 
-                                body:bodyDictionary 
-                        headerParams:headerParams
-                  requestContentType:requestContentType
-                 responseContentType:responseContentType
-                     completionBlock:^(NSDictionary *data, NSError *error) {
-                        if (error) {
-                            {{#returnBaseType}}completionBlock(nil, error);{{/returnBaseType}}
-                            {{^returnBaseType}}completionBlock(error);{{/returnBaseType}}
-                            return;
-                        }
-                        {{#returnBaseType}}
-                        {{returnBaseType}} *result = nil;
-                        if (data) {
-                            result = [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{returnBaseType}}} {{/instantiationType}}   alloc]initWithValues: data];
-                        }
-                        {{#returnBaseType}}completionBlock(result , nil);{{/returnBaseType}}
-                        {{/returnBaseType}}
-                    }];
-    {{/returnTypeIsPrimitive}}{{/returnBaseType}}{{/returnSimpleType}}
-{{newline}}
+    {{#returnTypeIsPrimitive}}{{>apiPrimitiveResponse}}{{/returnTypeIsPrimitive}}
+    {{#returnBaseType}}{{>apiNonPrimitiveResponse}}{{/returnBaseType}}
+    {{/returnSimpleType}}
 }
 
 {{/operation}}
