--- a/modules/swagger-codegen/src/main/resources/objc/model-header.mustache
+++ b/modules/swagger-codegen/src/main/resources/objc/model-header.mustache
@@ -6,16 +6,14 @@
 {{#models}}
 {{#model}}
 
-@interface {{classname}} : {{^parent}}SWGObject{{/parent}}{{#parent}}{{parent}}{{/parent}}
+@interface {{classname}} : SWGObject
 
 {{#vars}}
 @property(nonatomic) {{datatype}} {{name}};  {{#description}}/* {{{description}}} {{#isNotRequired}}[optional]{{/isNotRequired}} */{{/description}}{{newline}}
 {{/vars}}
-{{#hasVars}}
-- (id) {{#vars}}{{name}}: ({{datatype}}) {{name}}{{#hasMore}}
-  {{/hasMore}}{{^hasMore}};{{/hasMore}}
-       {{/vars}}
-{{/hasVars}}
+- (id) {{#vars}}{{name}}: ({{datatype}}) {{name}}{{#hasMore}}{{newline}}     {{/hasMore}}{{^hasMore}};{{/hasMore}}
+    {{/vars}}
+{{newline}}
 - (id) initWithValues: (NSDictionary*)dict;
 - (NSDictionary*) asDictionary;
 {{newline}}
