--- a/modules/swagger-codegen/src/main/resources/objc/api-header.mustache
+++ b/modules/swagger-codegen/src/main/resources/objc/api-header.mustache
@@ -1,6 +1,7 @@
 #import <Foundation/Foundation.h>
 {{#imports}}#import "{{import}}.h"
 {{/imports}}
+#import "SWGObject.h"
 {{newline}}
 
 {{#operations}}
@@ -14,16 +15,26 @@
 {{#operation}}
 /**
 
- {{#summary}}{{{summary}}}{{/summary}}
- {{#notes}}{{{notes}}}{{/notes}}
+ {{{summary}}}
+ {{#notes}}
+ {{{notes}}}
+ {{/notes}}
 
- {{#allParams}}@param {{paramName}} {{description}}
+ {{#allParams}}
+ @param {{paramName}} {{description}}
  {{/allParams}}
+
+ return type: {{returnType}}
  */
--(NSNumber*) {{nickname}}WithCompletionBlock {{^allParams}}:{{/allParams}}{{#allParams}}{{#secondaryParam}}
-            {{paramName}}{{/secondaryParam}}: ({{{dataType}}}) {{paramName}}{{/allParams}}
-{{#returnBaseType}}{{#hasParams}}    completionHandler: {{/hasParams}}(void (^)({{returnType}} output, NSError* error))completionBlock;{{/returnBaseType}}
-{{^returnBaseType}}{{#hasParams}}    completionHandler: {{/hasParams}}(void (^)(NSError* error))completionBlock;{{/returnBaseType}}
+-(NSNumber*) {{nickname}}WithCompletionBlock {{^allParams}}:{{/allParams}}{{#allParams}}{{#secondaryParam}}     {{paramName}}{{/secondaryParam}}:({{{dataType}}}) {{paramName}} {{#hasMore}}
+{{/hasMore}}{{/allParams}}
+    {{#returnBaseType}}{{#hasParams}}
+    completionHandler: {{/hasParams}}(void (^)({{returnType}} output, NSError* error))completionBlock;{{/returnBaseType}}
+    {{^returnBaseType}}{{#hasParams}}
+    completionHandler: {{/hasParams}}(void (^)(NSError* error))completionBlock;{{/returnBaseType}}
+
+{{newline}}
 {{/operation}}
+
 {{/operations}}
 @end
