--- a/modules/swagger-codegen/src/main/resources/objc/model-body.mustache
+++ b/modules/swagger-codegen/src/main/resources/objc/model-body.mustache
@@ -3,88 +3,77 @@
 #import "SWGDate.h"
 #import "{{classname}}.h"
 
-@implementation {{classname}}{{#parent}}: {{parent}}{{/parent}}
+@implementation {{classname}}
 
-{{#hasVars}}
--(id){{#vars}}{{name}}: ({{datatype}}) {{name}}{{^hasMore}} { {{/hasMore}}
+-(id){{#vars}}{{name}}: ({{datatype}}) {{name}}
     {{/vars}}
+{{newline}}{
     {{#vars}}_{{name}} = {{name}};
     {{/vars}}
+
     return self;
 }
-{{/hasVars}}
+
 -(id) initWithValues:(NSDictionary*)dict
 {
     self = [super init];
     if(self) {
         {{#vars}}{{#isPrimitiveType}}_{{name}} = dict[@"{{baseName}}"];{{/isPrimitiveType}}
-        {{#complexType}}id {{name}}_dict = dict[@"{{baseName}}"];{{#isContainer}}
+        {{#complexType}}
+        id {{name}}_dict = dict[@"{{baseName}}"];
+        {{#isContainer}}
         if([{{name}}_dict isKindOfClass:[NSArray class]]) {
             NSMutableArray * objs = [[NSMutableArray alloc] initWithCapacity:[(NSArray*){{name}}_dict count]];
             if([(NSArray*){{name}}_dict count] > 0) {
                 for (NSDictionary* dict in (NSArray*){{name}}_dict) {
-                    {{{complexType}}}* d = [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{complexType}}} {{/instantiationType}} alloc] initWithValues:dict];
+                    {{{complexType}}}* d = [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{complexType}}}{{/instantiationType}} alloc] initWithValues:dict];
                     [objs addObject:d];
                 }
                 _{{{name}}} = [[NSArray alloc] initWithArray:objs];
             }
-            else {
+            else
                 _{{name}} = [[NSArray alloc] init];
-            }
         }
         else {
             _{{name}} = [[NSArray alloc] init];
-        }{{/isContainer}}
-        {{#isNotContainer}}if({{name}}_dict != nil)
+        }
+        {{/isContainer}}{{#isNotContainer}}
+        if({{name}}_dict != nil)
             _{{name}} = [[{{#instantiationType}}NSClassFromString(@"{{{instantiationType}}}") {{/instantiationType}}{{^instantiationType}}{{{complexType}}} {{/instantiationType}} alloc]initWithValues:{{name}}_dict];
         {{/isNotContainer}}
-        {{/complexType}}{{/vars}}
+        {{/complexType}}
+        {{/vars}}{{newline}}
     }
     return self;
 }
 
 -(NSDictionary*) asDictionary {
     NSMutableDictionary* dict = [[NSMutableDictionary alloc] init];
-    {{#vars}}{{#complexType}}
+    {{#vars}}
+    {{#complexType}}
     if(_{{name}} != nil){
-        {{#isContainer}}
         if([_{{name}} isKindOfClass:[NSArray class]]){
-        NSMutableArray * array = [[NSMutableArray alloc] init];
-            for( {{complexType}} *{{name}} in _{{name}}) {
+            NSMutableArray * array = [[NSMutableArray alloc] init];
+            for( {{complexType}} *{{name}} in (NSArray*)_{{name}}) {
                 [array addObject:[(SWGObject*){{name}} asDictionary]];
             }
             dict[@"{{name}}"] = array;
         }
-        {{/isContainer}}
-        {{^isContainer}}
-        if(_{{name}} && [_{{name}} isKindOfClass:[SWGDate class]]) {
+        else if(_{{name}} && [_{{name}} isKindOfClass:[SWGDate class]]) {
             NSString * dateString = [(SWGDate*)_{{name}} toString];
             if(dateString){
-            dict[@"{{name}}"] = dateString;
+                dict[@"{{name}}"] = dateString;
             }
         }
         else {
-            if(_{{name}} != nil)
-            dict[@"{{baseName}}"] = [(SWGObject*)_{{name}} asDictionary];
+        {{/complexType}}
+            if(_{{name}} != nil) dict[@"{{baseName}}"] = {{#complexType}}[(SWGObject*){{/complexType}}_{{name}} {{#complexType}}asDictionary]{{/complexType}};
+        {{#complexType}}
         }
-        {{/isContainer}}
     }
     {{/complexType}}
-    {{#isPrimitiveType}}{{#isNotContainer}}
-    if(_{{name}} != nil)
-        dict[@"{{baseName}}"] = _{{name}};
-    {{/isNotContainer}}
-    {{#isContainer}}
-    if(_{{name}} != nil) {
-        if([_{{name}} isKindOfClass:[NSArray class]]) {
-            dict[@"_{{name}}"] = [[NSArray alloc] initWithArray: (NSArray*) _{{name}} copyItems:true];
-        }
-        else if([_{{name}} isKindOfClass:[NSDictionary class]]) {
-            dict[@"{{name}}"] = [[NSDictionary alloc] initWithDictionary:(NSDictionary*)_{{name}} copyItems:true];
-        }
-    }
-    {{/isContainer}}
-    {{/isPrimitiveType}}{{/vars}}
+    {{/vars}}
+
     NSDictionary* output = [dict copy];
     return output;
 }
