Support for HTTP Async client transport for Jersey on Scala
When generating Scala client, the ApiInvoker is a class with
overridable options, avoiding the need of public vars to be
manually modified.

Additionally it is possible to plug the AsyncHttp protocol
for Jersey in order to achieve Netty support and maximum scalability.

NOTE: Support for Scala 2.10.0-3 removed as largely obsolete

--- a/src/main/resources/scala/pom.mustache
+++ b/src/main/resources/scala/pom.mustache
@@ -163,6 +163,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.jfarcand</groupId>
+      <artifactId>jersey-ahc-client</artifactId>
+      <version>${jersey-async-version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>${scala-version}</version>
@@ -221,6 +227,7 @@
     </profiles>
   <properties>
     <jersey-version>1.7</jersey-version>
+    <jersey-async-version>1.0.5</jersey-async-version>
     <junit-version>4.8.1</junit-version>
     <maven-plugin.version>1.0.0</maven-plugin.version>
     <junit-version>4.8.1</junit-version>
