--- a/modules/swagger-codegen/src/main/resources/scala/apiInvoker.mustache
+++ b/modules/swagger-codegen/src/main/resources/scala/apiInvoker.mustache
@@ -35,10 +35,12 @@ object ScalaJsonUtil {
   }
 }
 
-object ApiInvoker {
-  val mapper = ScalaJsonUtil.getJsonMapper
-  val defaultHeaders: HashMap[String, String] = HashMap()
-  val hostMap: HashMap[String, Client] = HashMap()
+class ApiInvoker(val mapper: ObjectMapper = ScalaJsonUtil.getJsonMapper,
+                 httpHeaders: HashMap[String, String] = HashMap(),
+                 hostMap: HashMap[String, Client] = HashMap(),
+                 asyncHttpClient: Boolean = false) {
+
+  var defaultHeaders: HashMap[String, String] = httpHeaders
 
   def escape(value: String): String = {
     URLEncoder.encode(value, "utf-8").replaceAll("\\+", "%20")
@@ -151,14 +153,30 @@ object ApiInvoker {
     hostMap.contains(host) match {
       case true => hostMap(host)
       case false => {
-        val client = Client.create()
+        val client = newClient(host)
         // client.addFilter(new LoggingFilter())
         hostMap += host -> client
         client
       }
     }
   }
+  
+  def newClient(host: String): Client = asyncHttpClient match {
+    case true => {
+      import org.sonatype.spice.jersey.client.ahc.config.DefaultAhcConfig
+      import org.sonatype.spice.jersey.client.ahc.AhcHttpClient
+
+      val config: DefaultAhcConfig = new DefaultAhcConfig()
+      AhcHttpClient.create(config)
+    }
+    case _ => Client.create()
+  }
 }
+
+object ApiInvoker extends ApiInvoker(mapper = ScalaJsonUtil.getJsonMapper,
+  httpHeaders = HashMap(),
+  hostMap = HashMap(),
+  asyncHttpClient = {{asyncHttpClient}})
 
 class ApiException(val code: Int, msg: String) extends RuntimeException(msg)
 
