--- a/src/main/resources/scala/api.mustache
+++ b/src/main/resources/scala/api.mustache
@@ -11,8 +11,10 @@ import java.util.Date
 import scala.collection.mutable.HashMap
 
 {{#operations}}
-class {{classname}}(val basePath: String = "{{basePath}}",
-                        apiInvoker: ApiInvoker = ApiInvoker) {
+class {{classname}}(val defBasePath: String = "{{basePath}}",
+                        defApiInvoker: ApiInvoker = ApiInvoker) {
+  var basePath = defBasePath
+  var apiInvoker = defApiInvoker
 
   def addHeader(key: String, value: String) = apiInvoker.defaultHeaders += key -> value 
 
