--- a/modules/swagger-codegen/src/main/resources/JavaJaxRS/pom.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaJaxRS/pom.mustache
@@ -124,7 +124,7 @@
     </dependency>
   </dependencies>
   <properties>
-    <swagger-core-version>1.5.1-SNAPSHOT</swagger-core-version>
+    <swagger-core-version>1.5.1-M1</swagger-core-version>
     <jetty-version>8.1.11.v20130520</jetty-version>
     <jersey-version>1.13</jersey-version>
     <slf4j-version>1.6.3</slf4j-version>
