--- a/modules/swagger-codegen/src/main/resources/python/swagger.mustache
+++ b/modules/swagger-codegen/src/main/resources/python/swagger.mustache
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-"""Wordnik.com's Swagger generic API client. This client handles the client-
+"""Swagger generic API client. This client handles the client-
 server communication, and is invariant across implementations. Specifics of
 the methods and models for each application are generated from the Swagger
 templates."""
