--- a/modules/swagger-codegen/src/main/resources/php/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/api.mustache
@@ -1,6 +1,6 @@
 <?php
 /**
- *  Copyright 2014 Reverb Technologies, Inc.
+ *  Copyright 2015 Reverb Technologies, Inc.
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -63,7 +63,7 @@ class {{classname}} {
   		}{{/pathParams}}
       {{#formParams}}
       if (${{paramName}} != null) {
-        $formParams[{{paramName}}] = {{#isFile}}'@' . {{/isFile}}${{paramName}}
+        $formParams[{{paramName}}] = {{#isFile}}'@' . {{/isFile}}${{paramName}};
       }{{/formParams}}
       {{#bodyParams}}// body params
       $body = null;
