Allow SPNEGO security to be enforced as system level
By introducing the Java system property -DapiInvokerAuthScheme=SPNEGO
it is now possible to make sure that security is enforced regardless
of the client settings provided by the client.

This is sometimes needed as the Security Officer requires policies to
be enforced regardless of what the client code is actually going to
provide as parameters.

--- a/src/main/resources/scala/apiInvoker.mustache
+++ b/src/main/resources/scala/apiInvoker.mustache
@@ -41,6 +41,7 @@ class ApiInvoker(val mapper: ObjectMapper = ScalaJsonUtil.getJsonMapper,
                  asyncHttpClient: Boolean = false,
                  authScheme: String = "",
                  authPreemptive: Boolean = false) {
+  val SystemEnforcedAuthSchemeProperty = "apiInvokerAuthScheme"
 
   var defaultHeaders: HashMap[String, String] = httpHeaders
 
@@ -170,11 +171,14 @@ class ApiInvoker(val mapper: ObjectMapper = ScalaJsonUtil.getJsonMapper,
       import com.ning.http.client.Realm
 
       val config: DefaultAhcConfig = new DefaultAhcConfig()
-      if (!authScheme.isEmpty) {
-        val authSchemeEnum = Realm.AuthScheme.valueOf(authScheme)
+      val enforcedAuthScheme = System.getProperty(SystemEnforcedAuthSchemeProperty)
+      val scheme = if(enforcedAuthScheme == null) authScheme else enforcedAuthScheme
+      val preemptive = if(enforcedAuthScheme == null) authPreemptive else true
+      if (!scheme.isEmpty) {
+        val authSchemeEnum = Realm.AuthScheme.valueOf(scheme)
         config.getAsyncHttpClientConfigBuilder
           .setRealm(new Realm.RealmBuilder().setScheme(authSchemeEnum)
-          .setUsePreemptiveAuth(authPreemptive).build)
+          .setUsePreemptiveAuth(preemptive).build)
       }
       AhcHttpClient.create(config)
     }
