add logic to handle all 2xx response code, bug fix for string response, bug fix for showing error message using serialize

--- a/modules/swagger-codegen/src/main/resources/php/Swagger.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/Swagger.mustache
@@ -129,11 +129,14 @@ class APIClient {
     if ($response_info['http_code'] == 0) {
       throw new Exception("TIMEOUT: api call to " . $url .
         " took more than 5s to return" );
-    } else if ($response_info['http_code'] == 200) {
+    } else if ($response_info['http_code'] >= 200 && $response_info['http_code'] <= 299 ) {
       $data = json_decode($response);
+      if (json_last_error() > 0) { // if response is a string
+        $data = $response;
+      }
     } else if ($response_info['http_code'] == 401) {
       throw new Exception("Unauthorized API request to " . $url .
-          ": ".json_decode($response)->message );
+          ": ".serialize($response));
     } else if ($response_info['http_code'] == 404) {
       $data = null;
     } else {
