form parameter(single quote), add more comment

--- a/modules/swagger-codegen/src/main/resources/php/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/api.mustache
@@ -61,9 +61,9 @@ class {{classname}} {
   			$resourcePath = str_replace("{" . "{{baseName}}" . "}",
   			                            $this->apiClient->toPathValue(${{paramName}}), $resourcePath);
   		}{{/pathParams}}
-      {{#formParams}}
+      {{#formParams}}// form params
       if (${{paramName}} !== null) {
-        $formParams[{{baseName}}] = {{#isFile}}'@' . {{/isFile}}${{paramName}};
+        $formParams['{{baseName}}'] = {{#isFile}}'@' . {{/isFile}}${{paramName}};
       }{{/formParams}}
       {{#bodyParams}}// body params
       $body = null;
@@ -71,6 +71,7 @@ class {{classname}} {
         $body = ${{paramName}};
       }{{/bodyParams}}
 
+      // for HTTP post (form)
       $body = $body ?: $formParams;
 
       if (strpos($headerParams['Content-Type'], "application/x-www-form-urlencoded") > -1) {
