--- a/modules/swagger-codegen/src/main/resources/php/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/model.mustache
@@ -24,7 +24,7 @@
 {{#models}}
 {{#model}}
 
-class {{classname}} {
+class {{classname}} implements ArrayAccess {
   static $swaggerTypes = array(
       {{#vars}}'{{name}}' => '{{{datatype}}}'{{#hasMore}},
       {{/hasMore}}{{/vars}}
@@ -35,6 +35,26 @@ class {{classname}} {
   * {{{description}}}
   */{{/description}}
   public ${{name}}; /* {{{datatype}}} */{{/vars}}
+
+  public function __construct(array $data) {
+    {{#vars}}$this->{{name}} = $data["{{name}}"]{{/vars}}
+  }
+
+  public function offsetExists($offset) {
+    return isset($this->$offset);
+  }
+
+  public function offsetGet($offset) {
+    return $this->$offset;
+  }
+
+  public function offsetSet($offset, $value) {
+    $this->$offset = $value;
+  }
+
+  public function offsetUnset($offset) {
+    unset($this->$offset);
+  }
 }
 {{/model}}
 {{/models}}
