--- a/modules/swagger-codegen/src/main/resources/php/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/model.mustache
@@ -37,7 +37,7 @@ class {{classname}} implements ArrayAccess {
   public ${{name}}; /* {{{datatype}}} */{{/vars}}
 
   public function __construct(array $data) {
-    {{#vars}}$this->{{name}} = $data["{{name}}"];{{#hasMore}},
+    {{#vars}}$this->{{name}} = $data["{{name}}"];{{#hasMore}}
     {{/hasMore}}{{/vars}}
   }
 
