update php api client to support datetime (iso8601) for parameters (header, path, url, form)

--- a/modules/swagger-codegen/src/main/resources/php/Swagger.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/Swagger.mustache
@@ -178,7 +178,7 @@ class APIClient {
    * @return string the serialized object
    */
   public static function toPathValue($value) {
-      return rawurlencode($value);
+      return rawurlencode(toString($value));
   }
 
   /**
@@ -193,19 +193,47 @@ class APIClient {
         if (is_array($object)) {
             return implode(',', $object);
         } else {
-            return $object;
+            return toString($object);
         }
   }
 
   /**
-   * Just pass through the header value for now. Placeholder in case we
-   * find out we need to do something with header values.
+   * Take value and turn it into a string suitable for inclusion in
+   * the header. If it's a string, pass through unchanged
+   * If it's a datetime object, format it in ISO8601
    * @param string $value a string which will be part of the header
    * @return string the header string
    */
   public static function toHeaderValue($value) {
-      return $value;
+      return toString($value);
   }
+
+  /**
+   * Take value and turn it into a string suitable for inclusion in
+   * the http body (form parameter). If it's a string, pass through unchanged
+   * If it's a datetime object, format it in ISO8601
+   * @param string $value the value of the form parameter
+   * @return string the form string
+   */
+  public static function toFormValue($value) {
+      return toString($value);
+  }
+
+  /**
+   * Take value and turn it into a string suitable for inclusion in
+   * the parameter. If it's a string, pass through unchanged
+   * If it's a datetime object, format it in ISO8601
+   * @param string $value the value of the parameter
+   * @return string the header string
+   */
+  public static function toString($value) {
+    if ($value instanceof \DateTime) { // datetime in ISO8601 format
+      return $value->format(\DateTime::ISO8601);
+    }
+    else {
+      return $value;
+    }
+   }
 
   /**
    * Deserialize a JSON string into an object
