--- a/modules/swagger-codegen/src/main/resources/objc/model-header.mustache
+++ b/modules/swagger-codegen/src/main/resources/objc/model-header.mustache
@@ -9,14 +9,10 @@
 @interface {{classname}} : SWGObject
 
 {{#vars}}
-@property(nonatomic) {{datatype}} {{name}};  {{#description}}/* {{{description}}} {{#isNotRequired}}[optional]{{/isNotRequired}} */{{/description}}{{newline}}
+{{#description}}/* {{{description}}} {{#isNotRequired}}[optional]{{/isNotRequired}} */{{/description}}
+@property(nonatomic) {{{ datatype }}}{{#isNotRequired}}<Optional>{{/isNotRequired}} {{name}};  
 {{/vars}}
-- (id) {{#vars}}{{name}}: ({{datatype}}) {{name}}{{#hasMore}}{{newline}}     {{/hasMore}}{{^hasMore}};{{/hasMore}}
-    {{/vars}}
-{{newline}}
-- (id) initWithValues: (NSDictionary*)dict;
-- (NSDictionary*) asDictionary;
-{{newline}}
+
 @end
 {{/model}}
 {{/models}}
