--- a/modules/swagger-codegen/src/main/resources/nodejs/swagger.mustache
+++ b/modules/swagger-codegen/src/main/resources/nodejs/swagger.mustache
@@ -7,7 +7,7 @@
   },
 {{#apiInfo}}
   "produces": ["application/json"],
-  "host": "{{host}}",
+  "host": "localhost:{{serverPort}}",
   "basePath": "{{contextPath}}",
   "paths": {
 {{#apis}}
