--- a/modules/swagger-codegen/src/main/resources/JavaJaxRSDelegate/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaJaxRSDelegate/api.mustache
@@ -8,7 +8,10 @@ import com.sun.jersey.multipart.FormDataParam;
 {{#imports}}import {{import}};
 {{/imports}}
 
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
+import java.util.ServiceLoader;
 import {{package}}.NotFoundException;
 
 import java.io.InputStream;
@@ -23,12 +26,47 @@ import javax.ws.rs.*;
 @Api(value = "/{{baseName}}", description = "the {{baseName}} API")
 {{#operations}}
 public class {{classname}} {
+	
+	//load instance via ServiceLoader
+//	static {{classname}}Interface instance ;=new {{classname}}STUB();
+	static {{classname}}Interface instance ;//=new {{classname}}Impl();
+	static  {
+		    ServiceLoader<{{classname}}Interface> loader = ServiceLoader.load({{classname}}Interface.class);
+		    List<{{classname}}Interface> output = new ArrayList<{{classname}}Interface>();
+		    Iterator<{{classname}}Interface> itr = loader.iterator();
+		    {{classname}}Interface stub=null;
+		    while(itr.hasNext()) {
+		    	
+		    	try{
+			    	{{classname}}Interface next =itr.next();
+			    	System.out.println(next.getClass().getName());
+			    	if(next.getClass().getName().endsWith("STUB")){
+			    		stub=next;
+			    	}
+			    	else{
+			    		instance=next;
+			    	}
+		    	}catch(Throwable t){
+		    		t.printStackTrace();
+		    	}
+		    }
+		    if (instance==null)instance=stub;
+		  }
+	
+	
+	
+	public {{classname}}Interface getInstance() {
+		return instance;
+	}
+	public void setInstance({{classname}}Interface instance) {
+		this.instance = instance;
+	}
+
   {{#operation}}
   @{{httpMethod}}
   {{#subresourceOperation}}@Path("{{path}}"){{/subresourceOperation}}
   {{#hasConsumes}}@Consumes({ {{#consumes}}"{{mediaType}}"{{#hasMore}}, {{/hasMore}}{{/consumes}} }){{/hasConsumes}}
   {{#hasProduces}}@Produces({ {{#produces}}"{{mediaType}}"{{#hasMore}}, {{/hasMore}}{{/produces}} }){{/hasProduces}}
-  // {{returnType}}
   @ApiOperation(value = "{{{summary}}}", notes = "{{{notes}}}", response = {{{returnType}}}.class{{#returnContainer}}, responseContainer = "{{{returnContainer}}}"{{/returnContainer}})
   @ApiResponses(value = { {{#responses}}
     @ApiResponse(code = {{{code}}}, message = "{{{message}}}"){{#hasMore}},
@@ -37,9 +75,17 @@ public class {{classname}} {
   public Response {{nickname}}({{#allParams}}{{>queryParams}}{{>pathParams}}{{>headerParams}}{{>bodyParams}}{{>formParams}}{{#hasMore}},
     {{/hasMore}}{{/allParams}})
       throws NotFoundException {
-      // do some magic!
-      return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
-  }
+	  {{{returnType}}}{{#returnContainer}} []/*{{{returnContainer}}}*/{{/returnContainer}} response=null;
+	  try{
+		  
+		  {{#returnBaseType}}response={{/returnBaseType}}{{^returnBaseType}}{{/returnBaseType}}
+		  instance.{{nickname}}Impl({{#allParams}}{{>callMethodParams}}{{#hasMore}},{{/hasMore}}{{/allParams}});
+	  }catch(Exception e){
+		e.printStackTrace();
+		return Response.ok().entity(response).build();
+	  }
+      return Response.ok().entity(response).build();
+   }
 
   {{/operation}}
 }
