--- a/modules/swagger-codegen/src/main/resources/JavaJaxRSDelegate/web.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaJaxRSDelegate/web.mustache
@@ -34,7 +34,7 @@
     </init-param>
     <init-param>
       <param-name>swagger.api.basepath</param-name>
-      <param-value>http://localhost:8002</param-value>
+      <param-value>http://localhost:8081/swagger-server-1.0.0</param-value>
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
