fixed keyMapper in model-body.mustache in objc clent

--- a/modules/swagger-codegen/src/main/resources/objc/model-body.mustache
+++ b/modules/swagger-codegen/src/main/resources/objc/model-body.mustache
@@ -3,14 +3,12 @@
 #import "{{classname}}.h"
 
 @implementation {{classname}}
-{{#vars}}
-    
+
 + (JSONKeyMapper *)keyMapper
 {
-    return [[JSONKeyMapper alloc] initWithDictionary:@{@"{{baseName}}": @"{{name}}"}];    
+    return [[JSONKeyMapper alloc] initWithDictionary:@{ {{#vars}}@"{{baseName}}": @"{{name}}"{{#hasMore}}, {{/hasMore}}{{/vars}} }];
 }
-    
-{{/vars}}
+
 {{/model}}
 @end
 {{/models}}
